# 2048

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: agent.hpp  bitboard.cpp  bitboard.hpp  eval.cpp  eval.hpp  expectiminimax.cpp  expectiminimax.hpp  game.cpp  game.hpp  hyperparameter.cpp  hyperparameter.hpp  main.cpp  monte_carlo.cpp  monte_carlo.hpp  moves.cpp  moves.hpp
